<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:orientation="vertical">

        <TextView
            android:id="@+id/create_profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/create_profile_title"
            android:textSize="24sp"
            android:gravity="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/first_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/first_name"
                                    android:autofillHints="no"
                                    android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/last_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/last_name"
                                    android:autofillHints="no"
                                    android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/date_of_birth"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/date_of_birth_hint"
                                    android:autofillHints="no"
                                    android:inputType="date" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <RadioGroup
                            android:id="@+id/gender_select"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_margin="8dp">

                                <TextView
                                    android:id="@+id/gender"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/gender"
                                    android:textSize="18sp" />

                                <RadioButton
                                    android:id="@+id/male"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/male" />

                                <RadioButton
                                    android:id="@+id/female"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/female" />

                        </RadioGroup>

                        <Spinner
                            android:id="@+id/education_level"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"/>

                        <TextView
                            android:id="@+id/select_hobbies_prompt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_hobbies"
                            android:textSize="18sp"
                            android:layout_margin="8dp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/hobbies"
                            android:layout_marginHorizontal="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:choiceMode="multipleChoice"
                            android:nestedScrollingEnabled="false" />

                        <TextView
                            android:id="@+id/select_image_prompt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_image_prompt"
                            android:textSize="18sp"
                            android:layout_margin="8dp" />

                        <ImageView
                            android:id="@id/profile_picture"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:clickable="true"
                            android:layout_margin="8dp"
                            android:src="@drawable/portrait_placeholder" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/bio"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/brief_desc_text"
                                    android:autofillHints="no"
                                    android:inputType="text|textMultiLine"
                                    android:lines="5"
                                    android:gravity="top"
                                    android:scrollbars="vertical" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/submit_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/submit" />

                        <Button
                            android:id="@+id/all_profiles_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/view_all_profiles" />

                </LinearLayout>

        </ScrollView>

</LinearLayout>